[package]
name = "pallet-ocw-circuits"
version = "6.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME example pallet for offchain worker"
readme = "README.md"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4", default-features = false }

interstellar-ipfs-client = { git = "https://github.com/Interstellar-Network/rs-common.git", branch = "main", default-features = false, features = [
	"with_sp_offchain",
], version = "^0.5" }
circuits-storage-common = { path = "../../circuits-storage-common", default-features = false }

codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39", optional = true }

sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }

sp-keystore = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39", optional = true }

# MUST NOT try to compile "lib_circuits" for WASM
# 	CXX include path:
#   	/home/aaa/workspace/interstellar/integritee-node/target/debug/wbuild/integritee-node-runtime/target/wasm32-unknown-unknown/release/build/circuit-gen-rs-234ffc1b9bc36ac1/out/cxxbridge/include
#   	/home/aaa/workspace/interstellar/integritee-node/target/debug/wbuild/integritee-node-runtime/target/wasm32-unknown-unknown/release/build/circuit-gen-rs-234ffc1b9bc36ac1/out/cxxbridge/crate
# 	System is unknown to cmake, create:
# 	Platform/unknown to use this system, please post your config file on discourse.cmake.org so it can be added to c
# cf repo "integritee-node"
[target.'cfg(not(target_family = "wasm"))'.dependencies]
# IMPORTANT: "pallet-ocw-garble" depends on "pallet-ocw-circuits" for Storate purposes; but we SHOULD not pull "circuit-gen-rs" unless needed
circuit-gen-rs = { version = "0.1.0", git = "https://github.com/Interstellar-Network/lib_circuits.git", default-features = false, features = [
	"alloc",
], optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
	"sp-keystore/std",
	"circuit-gen-rs?/std",
	"interstellar-ipfs-client/std",
	"circuits-storage-common/std",
]
sgx = ["circuit-gen-rs?/alloc", "interstellar-ipfs-client/sgx"]
circuit-gen-rs = ["dep:circuit-gen-rs"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]

[build-dependencies]
# pb-rs = "0.9.1"
# walkdir = "2.3.2"

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2"
serial_test = "2"
tokio = { version = "*", default-features = false, features = ["rt", "macros"] }
futures = "0.3"

interstellar-http-client = { default-features = false, git = "https://github.com/Interstellar-Network/rs-common.git", branch = "main", features = [
	"with_sp_offchain",
], version = "^0.5" }
