[package]
name = "pallet-ocw-garble"
version = "4.0.0-dev"
edition = "2021"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = "https://github.com/jimmychu0807/substrate-offchain-worker-demo"
description = "A pallet that demonstrates off-chain workers feature in Substrate"
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"pallet",
	"offchain worker",
]
scale-info = { default-features = false, features = ['derive'], version = "2" }
serde = { version = "1", default-features = false, features = ['derive'] }
serde_json = { version = "1", default-features = false, features = ['alloc'] }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = ['derive'] }
serde_json = { version = "1", default-features = false, features = ['alloc'] }
rand_chacha = { version = "0.3.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
bytes = { version = "1", default-features = false }
hex = { version = "0.4", default-features = false }

http-grpc-client = { default-features = false, git = "https://github.com/Interstellar-Network/rs-common.git", branch = "main" }
pallet-ocw-circuits = { path = "../ocw-circuits", default-features = false }
pallet-tx-validation = { path = "../tx-validation", default-features = false }
circuits-storage-common = { path = "../../circuits-storage-common", default-features = false }
# TODO TOREMOVE
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36"}
lib-garble-rs = { git = "https://github.com/Interstellar-Network/lib-garble-rs.git", branch = "main", default-features = false }
ipfs-client-http-req = { git = "https://github.com/Interstellar-Network/lib-garble-rs.git", branch = "main", default-features = false }

# prost: could not find a way to use encode() in no_std context...
# = note: the lang item is first defined in crate `std` (which `byteorder` depends on)
# = note: first definition in `std` loaded from /home/pratn/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/wasm32-unknown-unknown/lib/libstd-d9a8e4ca4a56d589.rlib
# quick-protobuf = { version = "0.8.0", default-features = false }
# quick-protobuf = "0.8.0"

codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36"}
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36", optional = true }

sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-io = { optional = true, default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-keystore = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36", optional = true }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }

sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

# TEMP; only needed for "get_timestamp_rpc"
# itp-rpc = { path = "../../../core-primitives/rpc", default-features = false }
# itc-rpc-client = { path = "../../../core/rpc-client" }
# itp-types = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "master" }
# itp-utils = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "master" }
#
# substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
	"rand_chacha/std",
	# custom
	"circuits-storage-common/std",
	"pallet-tx-validation/std",
	"pallet-ocw-circuits/std",
	"http-grpc-client/std",
	"http-grpc-client/with_http_req_std",
	"lib-garble-rs/std",
	"ipfs-client-http-req/std",
	# TEMP
	# "itp-types/std",
    # "itp-utils/std",
	# "itp-rpc/std",
	# "substrate-api-client/std",
]
sgx = [
	"http-grpc-client/sgx",
	"http-grpc-client/with_http_req_sgx",
	"lib-garble-rs/sgx",
	"ipfs-client-http-req/sgx",
	"sgx_tstd",
	# Needed to match [patch.crates-io] getrandom in enclave-runtime/Cargo.toml
	# IMPORTANT without this the "seed" in ocw-garble is always the same!
	"rand/getrandom",
	# TEMP
	# "itp-rpc/sgx",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]

[build-dependencies]
# prost-build = "0.11"

[dev-dependencies]
env_logger = "0.10"
test-log = "0.2"
serial_test = "1.0.0"

tests-utils = { default-features = false, git = "https://github.com/Interstellar-Network/rs-common.git", branch = "main" }
httpmock = "0.6"
tokio = { version = "*", default-features = false, features = ["rt", "macros"] }
futures = "0.3"
